[package]
name = "storyterming"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
colored = "2.0.0"
const_format = "0.2.30"
portable-pty = "0.7.0"
strip-ansi-escapes = "0.1.1"

[dev-dependencies]

[profile.dev.package.backtrace]
opt-level = 3
